basic playing, test

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,29 +1,13 @@
+@import url(http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
+
 @import './components/layout';
 @import './components/common/spinner';
 
-// html, body {
-// 	padding: 0;
-// 	margin: 0;
-// }
-//
-// body {
-// 	font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif;
-// }
-//
-// header {
-// 	position: absolute;
-// 	width: 500px;
-// 	height: 250px;
-// 	top: 50%;
-// 	left: 50%;
-// 	margin-top: -125px;
-// 	margin-left: -250px;
-// 	text-align: center;
-//
-//   h1 {
-//   	font-size: 60px;
-//   	font-weight: 100;
-//   	margin: 0;
-//   	padding: 0;
-//   }
-// }
+body {
+  -webkit-app-region: drag;
+  overflow-y: hidden;
+}
+
+html, body {
+  height: 100%;
+}
