--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -2,9 +2,9 @@
 
 @import './components/layout';
 @import './components/common/spinner';
+@import './components/player/player';
 
 body {
-  -webkit-app-region: drag;
   overflow-y: hidden;
   font-family: 'Source Sans Pro', sans-serif;
 }
@@ -14,36 +14,45 @@ html, body {
 }
 
 // TODO: Move to a less module?
+// https://mikethedj4.github.io/Webkit-Scrollbar-Generator/
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
+
 ::-webkit-scrollbar-button {
   width: 0px;
   height: 0px;
 }
+
 ::-webkit-scrollbar-thumb {
   background: #e1e1e1;
   border: 0px none #ffffff;
   border-radius: 0px;
+
+  &:hover {
+    background: #ffffff;
+  }
+
+  &:active {
+    background: #000000;
+  }
 }
-::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
-}
-::-webkit-scrollbar-thumb:active {
-  background: #000000;
-}
+
 ::-webkit-scrollbar-track {
   background: #666666;
   border: 0px none #ffffff;
   border-radius: 0px;
+
+  &:hover {
+    background: #666666;
+  }
+
+  &:active {
+    background: #333333;
+  }
 }
-::-webkit-scrollbar-track:hover {
-  background: #666666;
-}
-::-webkit-scrollbar-track:active {
-  background: #333333;
-}
+
 ::-webkit-scrollbar-corner {
   background: transparent;
 }
