work in progress, linter cleanup

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -3,6 +3,7 @@
 @import './components/layout';
 @import './components/common/spinner';
 @import './components/player/player';
+@import './components/common/menu';
 
 body {
   overflow-y: hidden;
