--- a/app/styles/components/common/menu.less
+++ b/app/styles/components/common/menu.less
@@ -1,3 +1,26 @@
 .menu-container {
-  width: 30px;
+  padding-top: 25px;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 48px;
+    background-color: #f1f1f1;
+    height: 100%;
+    position: fixed;
+    overflow: auto;
+
+    li a {
+      display: block;
+      color: #000;
+      padding: 8px 16px;
+      text-decoration: none;
+
+      &:hover {
+        background-color: #555;
+        color: white;
+      }
+    }
+  }
 }
