simplify models, add active class, fix loading/updating bugs

--- a/app/styles/components/common/menu.less
+++ b/app/styles/components/common/menu.less
@@ -21,6 +21,10 @@
         background-color: #555;
         color: white;
       }
+
+      &.active {
+        background-color: #aaa;
+      }
     }
   }
 }
