refactoring, update tests, style changes, implement download progress bar

--- a/app/styles/components/player/player.less
+++ b/app/styles/components/player/player.less
@@ -12,6 +12,8 @@
   width: 100%;
   border-top-width: 1px;
   border-top-style: solid;
+
+  background-color: white;
 }
 
 @import './progress-bar';
