--- a/app/styles/components/player/progress-bar.less
+++ b/app/styles/components/player/progress-bar.less
@@ -8,7 +8,6 @@
     height: 100%;
     position: absolute;
     line-height: inherit;
-    background-color: blue;
   }
 
   .progress-bar-handle {
@@ -17,5 +16,13 @@
     background-color: red;
     position: absolute;
     right: 0;
+  }
+
+  .play-progress {
+    background-color: blue;
+  }
+
+  .load-progress {
+    background-color: green;
   }
 }
