--- a/app/styles/components/layout.less
+++ b/app/styles/components/layout.less
@@ -1,6 +1,10 @@
 .main-container {
-  height: 235px;
+  padding: 15px 15px 0px 15px;
+  height: 260px;
   margin-bottom: 40px;
-  margin-left: 60px;
+  margin-left: 70px;
   overflow-y: scroll;
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-left-color: #aaa;
 }
