--- a/app/styles/components/player/progress-bar.less
+++ b/app/styles/components/player/progress-bar.less
@@ -1,28 +1,31 @@
 .progress-bar-container {
-  width: 100%;
-  height: 1.5em;
+  background-color: #aaa;
+  border-radius: 0.25em;
+  height: 0.5em;
   position: relative;
-  background-color: rgb(241, 241, 241);
+  width: 100%;
 
   .progress-bar-ribbon {
+    border-radius: 0.25em;
     height: 100%;
-    position: absolute;
     line-height: inherit;
+    position: absolute;
   }
 
   .progress-bar-handle {
+    background-color: #fff;
+    border-radius: 0.25em;
     height: 100%;
-    width: 10px;
-    background-color: red;
     position: absolute;
-    right: 0;
+    right: -5px;
+    width: 10px;
   }
 
   .play-progress {
-    background-color: blue;
+    background-color: #0275d8;
   }
 
   .load-progress {
-    background-color: green;
+    background-color: #ddd;
   }
 }
