--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -4,6 +4,7 @@
 @import './components/common/spinner';
 @import './components/player/player';
 @import './components/common/menu';
+@import './components/search';
 
 body {
   overflow-y: hidden;
