--- a/app/styles/components/player/player.less
+++ b/app/styles/components/player/player.less
@@ -1,19 +1,21 @@
 .player {
+  align-items: center;
+  background-color: #f1f1f1;
+
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: space-around;
-  align-items: center;
 
   position: fixed;
   left: 0px;
   bottom: 0px;
   height: 40px;
   width: 100%;
-  border-top-width: 1px;
-  border-top-style: solid;
 
-  background-color: white;
+  .borderless {
+    border-color: transparent;
+  }
 }
 
 @import './progress-bar';
