minor refactorings, move episodes into own components, fix skip bug

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -5,6 +5,7 @@
 @import './components/player/player';
 @import './components/common/menu';
 @import './components/search';
+@import './components/subscriptions';
 
 body {
   overflow-y: hidden;
