--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -6,6 +6,7 @@
 @import './components/common/menu';
 @import './components/search';
 @import './components/subscriptions';
+@import './components/settings';
 
 body {
   overflow-y: hidden;
