--- a/app/styles/components/layout.less
+++ b/app/styles/components/layout.less
@@ -1,8 +1,11 @@
 .main-container {
   background-color: #fafafa;
-  padding: 15px 15px 0px 15px;
   height: 260px;
   margin-bottom: 40px;
   margin-left: 70px;
   overflow-y: scroll;
+}
+
+.component-container {
+  padding: 15px 15px 0px 15px;
 }
