remove hardcoded size, add windows controls

--- a/app/styles/components/common/menu.less
+++ b/app/styles/components/common/menu.less
@@ -9,12 +9,14 @@
     height: 100%;
     position: fixed;
     overflow: auto;
+    -webkit-app-region: drag;
 
     li a {
       display: block;
       color: #000;
       padding: 8px 28px;
       text-decoration: none;
+      -webkit-app-region: no-drag;
 
       &:hover {
         background-color: #555;
