--- a/app/styles/components/layout.less
+++ b/app/styles/components/layout.less
@@ -1,8 +1,12 @@
 .main-container {
-  background-color: #fafafa;
-  padding: 15px 15px 0px 15px;
-  height: 260px;
+  background-color: #fa;
+  height: 100vh;
   margin-bottom: 40px;
   margin-left: 70px;
   overflow-y: scroll;
+  padding-bottom: 100px;
+}
+
+.player-overflow {
+  height: 40px;
 }
