--- a/app/styles/components/subscriptions.less
+++ b/app/styles/components/subscriptions.less
@@ -1,4 +1,7 @@
 .subscriptions-container {
+  padding-left: 15px;
+  padding-right: 15px;
+  
   .episode-list {
     display: flex;
     flex-direction: column;
