--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -5,6 +5,7 @@
 @import './components/player/player';
 @import './components/search';
 @import './components/subscriptions';
+@import './components/playlist';
 
 body {
   overflow-y: hidden;
