--- a/app/styles/components/layout.less
+++ b/app/styles/components/layout.less
@@ -4,7 +4,7 @@
   margin-bottom: 40px;
   margin-left: 70px;
   overflow-y: scroll;
-  padding-bottom: 100px;
+  padding-bottom: 50vh;
 }
 
 .player-overflow {
